--- a/package.json
+++ b/package.json
@@ -24,11 +24,19 @@
     },
     "devDependencies": {
         "@sap/ux-specification": "^1.102.14",
+        "@wdio/cli": "^7.30.0",
+        "@wdio/local-runner": "^7.30.0",
+        "@wdio/mocha-framework": "^7.26.0",
+        "@wdio/spec-reporter": "^7.29.1",
         "axios": "^1",
         "chai": "^4.3.4",
         "chai-as-promised": "^7.1.1",
         "chai-subset": "^1.6.0",
-        "semver": "^7"
+        "chromedriver": "^109.0.0",
+        "semver": "^7",
+        "wdio-chromedriver-service": "^7.3.2",
+        "wdio-timeline-reporter": "^5.1.4",
+        "wdio-ui5-service": "^1.1.0"
     },
     "scripts": {
         "genres": "cds serve test/genres.cds",
@@ -36,7 +44,8 @@
         "watch": "cds watch",
         "undeploy": "cf undeploy capire-bookshop --delete-services --delete-service-keys --delete-service-brokers",
         "build": "rimraf resources && mbt build -t gen --mtar mta.tar",
-        "deploy": "cf deploy gen/mta.tar -f"
+        "deploy": "cf deploy gen/mta.tar -f",
+        "wdi5": "wdio run ./app/admin-books/webapp/test/wdi5/wdio.conf.js"
     },
     "engines": {
         "node": "^16"
